--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				<p>Happy Bday Moti,Chikha from Madhuri </p>
 				<p><strong></strong></p>
 				
-				<p>I'd like to wish you one more time</p>
+				<p>We'd like to wish you one more time</p>
 				<p>a very happy birthday from Madhuri, Nilesh and Rahul</p>
 			</div>
 		</div>
