--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				<p>Mat your Birthday turn out</p>
 				<p>to be huge surprise</p>
 				<p>Happy Bday Moti,Chikha from Madhuri </p>
-				<p><strong></strong></p>
+				<p><strong>SHEEKHA</strong></p>
 				
 				<p>We'd like to wish you one more time</p>
 				<p>a very happy birthday from Madhuri, Nilesh and Rahul</p>
